--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
       transform: translateY(-5px);
     }
 
-    /* Footer Section */
+    /* Footer Section - Transparent */
     .footer {
-      background-color: rgba(0, 0, 0, 0.5); /* Transparent background with slight opacity */
+      background-color: transparent; /* No background color */
       color: white;
       text-align: center;
       padding: 20px;
